<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="score">0</string>
    <string name="action_settings">Settings</string>
    <string name="scoreprompt">Score:</string>
    <string name="game_title">2048</string>

    <string name="how_to_play"><b>HOW TO PLAY:</b> Swipe to move the tiles. When two tiles with the same number touch, they merge into one!iew</string>
    <string name="welcome">Join the numbers and get to the <b>2048 tile!</b></string>
    <string name="new_game">New Game</string>
    <string name="title_score">SCORE</string>
    <string name="title_best">BEST</string>

</resources>
