<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@color/font_color_main"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHowtoplay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/how_to_play"
        android:textColor="@color/font_color_main"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/welcome"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/btnNewgame"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btnNewgame"
        android:layout_width="88dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:background="@color/btn_background"
        android:text="@string/new_game"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvWelcome"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvScoreBg"
        android:layout_width="72dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/board_background"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:text="@string/title_score"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tvBestBg"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBestBg"
        android:layout_width="72dp"
        android:layout_height="61dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:background="@color/board_background"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:text="@string/title_best"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvScoreBg"
        app:layout_constraintEnd_toEndOf="@+id/tvScoreBg"
        app:layout_constraintTop_toTopOf="@+id/tvScoreBg"
        app:layout_constraintBottom_toBottomOf="@+id/tvScoreBg"
        app:layout_constraintVertical_bias="0.7" />

    <TextView
        android:id="@+id/tvBest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="168"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tvBestBg"
        app:layout_constraintEnd_toEndOf="@+id/tvBestBg"
        app:layout_constraintTop_toTopOf="@+id/tvBestBg"
        app:layout_constraintBottom_toBottomOf="@+id/tvBestBg"
        app:layout_constraintVertical_bias="0.7" />
</androidx.constraintlayout.widget.ConstraintLayout>